libsoy/vapi/ode-0.11.vapi


    [Compact]
    [CCode (cname="struct dxBody", cprefix="dBody",
            free_function="dBodyDestroy")]
    public class Body {
        [CCode (cname = "dBodyCreate")]
        public Body (World world);
        public World         GetWorld            ( );
        public void          SetData             (void *data);
        public void*         GetData             ( );
        public void          SetPosition         (Real x, Real y, Real z);
        public void          SetRotation         (Matrix3 R);
        public void          SetQuaternion       (Quaternion q);
        public void          SetLinearVel        (Real x, Real y, Real z);
        public void          SetAngularVel       (Real x, Real y, Real z);
        public unowned Vector3 GetPosition         ( );
        public void          CopyPosition        (out Vector3 pos);
        public unowned Matrix3 GetRotation         ( );
        public void          CopyRotation        (out Matrix3 R);
        public unowned Quaternion GetQuaternion       ( );
        public void          CopyQuaternion      (Quaternion quat);
        public unowned Vector3 GetLinearVel        ( );
        public unowned Vector3 GetAngularVel       ( );
        public void          SetMass             (Mass mass);
        public void          GetMass             (Mass mass);
        public void          AddForce            (Real fx, Real fy, Real fz);
        public void          AddTorque           (Real fx, Real fy, Real fz);
        public void          AddRelForce         (Real fx, Real fy, Real fz);
        public void          AddRelTorque        (Real fx, Real fy, Real fz);
        public void          AddForceAtPos       (Real fx, Real fy, Real fz,
                                                  Real px, Real py, Real pz);
        public void          AddForceAtRelPos    (Real fx, Real fy, Real fz,
                                                  Real px, Real py, Real pz);
        public void          AddRelForceAtPos    (Real fx, Real fy, Real fz,
                                                  Real px, Real py, Real pz);
        public void          AddRelForceAtRelPos (Real fx, Real fy, Real fz,
                                                  Real px, Real py, Real pz);
        public unowned Real* GetForce ( );
        public unowned Real* GetTorque ( );
        public void          SetForce  (Real x, Real y, Real z);
        public void          SetTorque (Real x, Real y, Real z);
        public void          GetRelPointPos  (Real px, Real py, Real pz,
                                              Vector3 result);
        public void          GetRelPointVel  (Real px, Real py, Real pz,
                                              Vector3 result);
        public void          GetPointVel     (Real px, Real py, Real pz,
                                              Vector3 result);
        public void          GetPosRelPoint  (Real px, Real py, Real pz,
                                              Vector3 result);
        public void          VectorToWorld   (Real px, Real py, Real pz,
                                              Vector3 result);
        public void          VectorFromWorld (Real px, Real py, Real pz,
                                              Vector3 result);
        public void          SetFiniteRotationMode (int mode);
        public void          SetFiniteRotationAxis (Real x, Real y, Real z);
        public int           GetFiniteRotationMode ( );
        public void          GetFiniteRotationAxis (Vector3 result);
        public int           GetNumJoints ( );
        public joints.Joint  GetJoint (int index);
        public void          SetDynamic ( );
        public void          SetKinematic ( );
        public int           IsKinematic ( );
        public void          Enable ( );
        public void          Disable ( );
        public int           IsEnabled ( );
        public void          SetGravityMode (int mode);
        public int           GetGravityMode ( );
        //public void        SetMovedCallback(void (*callback)(Body body));
        public geoms.Geom    GetFirstGeom ( );
        public static geoms.Geom GetNextGeom (geoms.Geom g);
        public void          SetDampingDefaults ( );
        public Real          GetLinearDamping ( );
        public void          SetLinearDamping (Real scale);
        public Real          GetAngularDamping ( );
        public void          SetAngularDamping (Real scale);
        public void          SetDamping (Real linear_scale,
                                         Real angular_scale);
        public Real          GetLinearDampingThreshold ( );
        public void          SetLinearDampingThreshold(Real threshold);
        public Real          GetAngularDampingThreshold ( );
        public void          SetAngularDampingThreshold (Real threshold);
        public Real          GetMaxAngularSpeed ( );
        public void          SetMaxAngularSpeed (Real max_speed);
        public int           GetGyroscopicMode ( );
        public void          SetGyroscopicMode (int enabled);
        public Real          GetAutoDisableLinearThreshold ( );
        public void          SetAutoDisableLinearThreshold (Real threshold);
        public Real          GetAutoDisableAngularThreshold ( );
        public void          SetAutoDisableAngularThreshold (Real threshold);
        public int           GetAutoDisableAverageSamplesCount ( );
        public void          SetAutoDisableAverageSamplesCount (uint count);
        public int           GetAutoDisableSteps ( );
        public void          SetAutoDisableSteps (int steps);
        public Real          GetAutoDisableTime ( );
        public void          SetAutoDisableTime (Real time);
        public int           GetAutoDisableFlag ( );
        public void          SetAutoDisableFlag (int do_auto_disable);
        public void          SetAutoDisableDefaults ( );
        [CCode (cname = "dConnectingJoint")]
        public joints.Joint  ConnectingJoint (Body other);
        [CCode (cname = "dConnectingJointList")]
        public int           ConnectingJointList (Body other,
                                                  out joints.Joint[] jl);
        [CCode (cname = "dAreConnected")]
        public int           AreConnected (Body other);
        [CCode (cname = "dAreConnectedExcluding")]
        public int           AreConnectedExcluding (Body other, int joint_type);
    }

    namespace joints {
        [Compact]
        [CCode (cname="struct dxJointGroup", cprefix="dJointGroup",
                free_function="dJointGroupDestroy")]
        public class JointGroup {
            [CCode (cname = "dJointGroupCreate")]
            public JointGroup (int max_size);
            public void          Empty ( );
        }

        [Compact]
        [CCode (cname="struct dxJoint", cprefix="dJoint",
                free_function="dJointDestroy")]
        public class Joint {
            [CCode (cname = "dJointCreateNull")]
            public Joint (World world, JointGroup? group);
            public int            GetNumBodies( );
            public void           Attach (Body? body1, Body? body2);
            public void           Enable ( );
            public void           Disable ( );
            public int            IsEnabled ( );
            public void           SetData (void* data);
            public void*          GetData ( );
            public JointType      GetType ( );
            public unowned Body   GetBody (int index);
            public void           SetFeedback (JointFeedback* jf);
            public JointFeedback* GetFeedback ( );
        }

        [Compact]
        [CCode (cname="struct dxJoint", free_function="dJointDestroy")]
        public class Ball : Joint {
            [CCode (cname = "dJointCreateBall")]
            public Ball (World world, JointGroup? group);

            [CCode (cname = "dJointSetBallAnchor")]
            public void SetAnchor (Real x, Real y, Real z);

            [CCode (cname = "dJointSetBallAnchor2")]
            public void SetAnchor2 (Real x, Real y, Real z);

            [CCode (cname = "dJointSetBallParam")]
            public void SetParam (int parameter, Real value);

            [CCode (cname = "dJointGetBallAnchor")]
            public void GetAnchor (Vector3 result);

            [CCode (cname = "dJointGetBallAnchor2")]
            public void GetAnchor2 (Vector3 result);

            [CCode (cname = "dJointGetBallParam")]
            public Real GetParam (int parameter);
        }

        [Compact]
        [CCode (cname="struct dxJoint", cprefix="dJoint",
                free_function="dJointDestroy")]
        public class Hinge : Joint {
            [CCode (cname = "dJointCreateHinge")]
            public Hinge (World world, JointGroup? group);

            [CCode (cname = "dJointSetHingeAnchor")]
            public void SetAnchor (Real x, Real y, Real z);

            [CCode (cname = "dJointSetHingeAnchorDelta")]
            public void SetAnchorDelta (Real  x, Real  y, Real  z,
                                        Real ax, Real ay, Real az);

            [CCode (cname = "dJointSetHingeAxis")]
            public void SetAxis (Real x, Real y, Real z);

            [CCode (cname = "dJointSetHingeAxisOffset")]
            public void SetAxisOffset (Real x, Real y, Real z, Real angle);

            [CCode (cname = "dJointSetHingeParam")]
            public void SetParam (int parameter, Real value);

            [CCode (cname = "dJointAddHingeTorque")]
            public void AddTorque(Real torque);

            [CCode (cname = "dJointGetHingeAnchor")]
            public void GetAnchor (Vector3 result);

            [CCode (cname = "dJointGetHingeAnchor2")]
            public void GetAnchor2 (Vector3 result);

            [CCode (cname = "dJointGetHingeAxis")]
            public void GetAxis (Vector3 result);

            [CCode (cname = "dJointGetHingeParam")]
            public Real GetParam (int parameter);

            [CCode (cname = "dJointGetHingeAngle")]
            public Real GetAngle ( );

            [CCode (cname = "dJointGetHingeAngleRate")]
            public Real GetAngleRate ( );
        }

        [Compact]
        [CCode (cname="struct dxJoint", cprefix="dJoint",
                free_function="dJointDestroy")]
        public class Slider : Joint {
            [CCode (cname = "dJointCreateSlider")]
            public Slider (World world, JointGroup? group);

            [CCode (cname = "dJointSetSliderAxis")]
            public void SetAxis (Real x, Real y, Real z);

            [CCode (cname = "dJointSetSliderAxisDelta")]
            public void SetAxisDelta (Real  x, Real  y, Real  z,
                                      Real ax, Real ay, Real az);

            [CCode (cname = "dJointSetSliderParam")]
            public void SetParam (int parameter, Real value);

            [CCode (cname = "dJointAddSliderForce")]
            public void AddForce(Real force);

            [CCode (cname = "dJointGetSliderPosition")]
            public Real GetPosition ( );

            [CCode (cname = "dJointGetSliderPositionRate")]
            public Real GetPositionRate ( );

            [CCode (cname = "dJointGetSliderAxis")]
            public void GetAxis (Vector3 result);

            [CCode (cname = "dJointGetSliderParam")]
            public Real GetParam (int parameter);
        }

        [Compact]
        [CCode (cname="struct dxJoint", cprefix="dJoint",
                free_function="dJointDestroy")]
        public class Contact : Joint {
            [CCode (cname = "dJointCreateContact")]
            public Contact (World world, JointGroup? group,
                            ode.Contact contact);
        }
